2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (shift_right), (load_graph_update),
	(load_graph_unalloc), (load_graph_alloc):
	* src/procman.h: Removed LoadGraph::odata. Just shift
	LoadGraph::data. See #164115. Thanks to Martin Ejdestig
	mejde@dtek.chalmers.se.

2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/gnome-system-monitor.schemas.in: Made 
	/apps/procman/show_tree FALSE default. See #305883.

2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (create_sys_view):
	Use "CPU" instead of "CPU%d" is system has only one cpu.
	Closes #305876.

2005-05-29  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (load_graph_destroy), (load_graph_new): Removed
	unused global (object_list).

2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* src/Makefile.am:
	* src/proctable.c:
	* src/selinux.c: (get_process_selinux_context),
	(can_show_security_context_column):
	* src/selinux.h: Moved all the SELinux code to src/selinux.[ch].
	Better SELinux (auto-)detection in configure.in.

2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (remove_info_from_list),
	(get_info): ProcInfo::children is now GSList.

2005-05-23  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (ghashtable_clear_callback), (ghashtable_clear),
	(add_new_maps), (compare_memmaps), (update_memmaps_dialog),
	(close_memmaps_dialog), (create_memmapsdata), (memmaps_timer),
	(create_single_memmaps_dialog), (create_memmaps_dialog): Big rework.
	
	Moved all data to MemMapsData instead of storing(hiding) stuff in the
	tree's gobject properties. So it's also now reentrant. Added some TODO.
	I think it's cleaner like this. opendialogs.c should be reworked the
	same way :/

2005-05-20  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (add_new_maps): Little cleanup. Removed unneeded
	MemmapsInfo type.
	
	* configure.in: Post release version bump.
