@@ -1,3 +1,9 @@
+2005-06-01  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/proctable.c: (update_info): Fixed process sort.
+	Closes #305060. This has an impact on performance but we're safe with
+	the smooth refresh.
+
 2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/load-graph.c: (shift_right), (load_graph_update),
